--- a/Plugins/org.mitk.lancet.neurosurgery/src/internal/NeuroSurgeryControls.ui
+++ b/Plugins/org.mitk.lancet.neurosurgery/src/internal/NeuroSurgeryControls.ui
@@ -51,7 +51,7 @@
       </size>
      </property>
      <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;Version Date: 2024.10.23&lt;/p&gt;&lt;p align=&quot;right&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;Version Date: 2024.10.25&lt;/p&gt;&lt;p align=&quot;right&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
    </item>
@@ -64,7 +64,7 @@
       </size>
      </property>
      <property name="currentIndex">
-      <number>2</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -343,7 +343,7 @@
        <item>
         <widget class="QTabWidget" name="tabWidget_2">
          <property name="currentIndex">
-          <number>0</number>
+          <number>1</number>
          </property>
          <widget class="QWidget" name="tab_8">
           <attribute name="title">
@@ -1052,7 +1052,7 @@
            <item>
             <widget class="QTabWidget" name="tabWidget_4">
              <property name="currentIndex">
-              <number>0</number>
+              <number>1</number>
              </property>
              <widget class="QWidget" name="tab_12">
               <attribute name="title">
@@ -1404,83 +1404,363 @@
               <attribute name="title">
                <string>模型绑定</string>
               </attribute>
-              <widget class="QLabel" name="label_88">
+              <widget class="QGroupBox" name="groupBox_11">
                <property name="geometry">
                 <rect>
-                 <x>20</x>
+                 <x>10</x>
                  <y>10</y>
-                 <width>195</width>
-                 <height>13</height>
+                 <width>311</width>
+                 <height>411</height>
                 </rect>
                </property>
-               <property name="text">
-                <string>头部皮肤</string>
+               <property name="title">
+                <string>组织模型绑定/重命名</string>
                </property>
+               <layout class="QGridLayout" name="gridLayout">
+                <item row="0" column="0">
+                 <layout class="QHBoxLayout" name="horizontalLayout_33">
+                  <item>
+                   <widget class="QLabel" name="label_13">
+                    <property name="font">
+                     <font>
+                      <family>微软雅黑</family>
+                      <pointsize>12</pointsize>
+                      <weight>75</weight>
+                      <bold>true</bold>
+                     </font>
+                    </property>
+                    <property name="text">
+                     <string>头部皮肤:</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QmitkSingleNodeSelectionWidget" name="mitk_MRI_Pic_2" native="true"/>
+                  </item>
+                 </layout>
+                </item>
+                <item row="4" column="0">
+                 <layout class="QHBoxLayout" name="horizontalLayout_35">
+                  <item>
+                   <widget class="QLabel" name="label_87">
+                    <property name="font">
+                     <font>
+                      <family>微软雅黑</family>
+                      <pointsize>12</pointsize>
+                      <weight>75</weight>
+                      <bold>true</bold>
+                     </font>
+                    </property>
+                    <property name="text">
+                     <string>脑膜</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QmitkSingleNodeSelectionWidget" name="mitk_MRI_Pic_5" native="true"/>
+                  </item>
+                 </layout>
+                </item>
+                <item row="1" column="0">
+                 <layout class="QHBoxLayout" name="horizontalLayout_5">
+                  <item>
+                   <widget class="QLabel" name="label_85">
+                    <property name="font">
+                     <font>
+                      <family>微软雅黑</family>
+                      <pointsize>12</pointsize>
+                      <weight>75</weight>
+                      <bold>true</bold>
+                     </font>
+                    </property>
+                    <property name="text">
+                     <string>头部骨骼</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QmitkSingleNodeSelectionWidget" name="mitk_MRI_Pic_3" native="true"/>
+                  </item>
+                 </layout>
+                </item>
+                <item row="3" column="0">
+                 <layout class="QHBoxLayout" name="horizontalLayout_36">
+                  <item>
+                   <widget class="QLabel" name="label_91">
+                    <property name="font">
+                     <font>
+                      <family>微软雅黑</family>
+                      <pointsize>12</pointsize>
+                      <weight>75</weight>
+                      <bold>true</bold>
+                     </font>
+                    </property>
+                    <property name="text">
+                     <string>脑组织</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QmitkSingleNodeSelectionWidget" name="mitk_MRI_Pic_6" native="true"/>
+                  </item>
+                 </layout>
+                </item>
+                <item row="2" column="0">
+                 <layout class="QHBoxLayout" name="horizontalLayout_34">
+                  <item>
+                   <widget class="QLabel" name="label_90">
+                    <property name="font">
+                     <font>
+                      <family>微软雅黑</family>
+                      <pointsize>12</pointsize>
+                      <weight>75</weight>
+                      <bold>true</bold>
+                     </font>
+                    </property>
+                    <property name="text">
+                     <string>脑髓液</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QmitkSingleNodeSelectionWidget" name="mitk_MRI_Pic_4" native="true"/>
+                  </item>
+                 </layout>
+                </item>
+                <item row="5" column="0">
+                 <layout class="QHBoxLayout" name="horizontalLayout_37">
+                  <item>
+                   <widget class="QLabel" name="label_89">
+                    <property name="font">
+                     <font>
+                      <family>微软雅黑</family>
+                      <pointsize>12</pointsize>
+                      <weight>75</weight>
+                      <bold>true</bold>
+                     </font>
+                    </property>
+                    <property name="text">
+                     <string>脑区</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QmitkSingleNodeSelectionWidget" name="mitk_MRI_Pic_7" native="true"/>
+                  </item>
+                 </layout>
+                </item>
+               </layout>
               </widget>
-              <widget class="QLabel" name="label_85">
+              <widget class="QWidget" name="">
                <property name="geometry">
                 <rect>
-                 <x>20</x>
-                 <y>57</y>
-                 <width>195</width>
-                 <height>13</height>
+                 <x>360</x>
+                 <y>40</y>
+                 <width>311</width>
+                 <height>281</height>
                 </rect>
                </property>
-               <property name="text">
-                <string>头部骨骼</string>
-               </property>
-              </widget>
-              <widget class="QLabel" name="label_90">
-               <property name="geometry">
-                <rect>
-                 <x>20</x>
-                 <y>104</y>
-                 <width>195</width>
-                 <height>13</height>
-                </rect>
-               </property>
-               <property name="text">
-                <string>脑髓液</string>
-               </property>
-              </widget>
-              <widget class="QLabel" name="label_91">
-               <property name="geometry">
-                <rect>
-                 <x>20</x>
-                 <y>198</y>
-                 <width>195</width>
-                 <height>13</height>
-                </rect>
-               </property>
-               <property name="text">
-                <string>脑组织</string>
-               </property>
-              </widget>
-              <widget class="QLabel" name="label_87">
-               <property name="geometry">
-                <rect>
-                 <x>20</x>
-                 <y>151</y>
-                 <width>195</width>
-                 <height>13</height>
-                </rect>
-               </property>
-               <property name="text">
-                <string>脑膜</string>
-               </property>
-              </widget>
-              <widget class="QLabel" name="label_89">
-               <property name="geometry">
-                <rect>
-                 <x>20</x>
-                 <y>245</y>
-                 <width>195</width>
-                 <height>13</height>
-                </rect>
-               </property>
-               <property name="text">
-                <string>脑区</string>
-               </property>
+               <layout class="QVBoxLayout" name="verticalLayout_25">
+                <item>
+                 <layout class="QHBoxLayout" name="horizontalLayout_38">
+                  <item>
+                   <widget class="QLabel" name="label_6">
+                    <property name="minimumSize">
+                     <size>
+                      <width>60</width>
+                      <height>0</height>
+                     </size>
+                    </property>
+                    <property name="font">
+                     <font>
+                      <family>微软雅黑</family>
+                      <weight>75</weight>
+                      <bold>true</bold>
+                     </font>
+                    </property>
+                    <property name="text">
+                     <string>头部皮肤</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLineEdit" name="lineEdit">
+                    <property name="text">
+                     <string>Skin</string>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </item>
+                <item>
+                 <layout class="QHBoxLayout" name="horizontalLayout_39">
+                  <item>
+                   <widget class="QLabel" name="label_7">
+                    <property name="minimumSize">
+                     <size>
+                      <width>60</width>
+                      <height>0</height>
+                     </size>
+                    </property>
+                    <property name="font">
+                     <font>
+                      <family>微软雅黑</family>
+                      <weight>75</weight>
+                      <bold>true</bold>
+                     </font>
+                    </property>
+                    <property name="text">
+                     <string>头部骨骼</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLineEdit" name="lineEdit_2">
+                    <property name="text">
+                     <string>Skull</string>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </item>
+                <item>
+                 <layout class="QHBoxLayout" name="horizontalLayout_40">
+                  <item>
+                   <widget class="QLabel" name="label_8">
+                    <property name="minimumSize">
+                     <size>
+                      <width>60</width>
+                      <height>0</height>
+                     </size>
+                    </property>
+                    <property name="font">
+                     <font>
+                      <family>微软雅黑</family>
+                      <weight>75</weight>
+                      <bold>true</bold>
+                     </font>
+                    </property>
+                    <property name="text">
+                     <string>脑髓液</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLineEdit" name="lineEdit_3">
+                    <property name="text">
+                     <string>CSF</string>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </item>
+                <item>
+                 <layout class="QHBoxLayout" name="horizontalLayout_41">
+                  <item>
+                   <widget class="QLabel" name="label_18">
+                    <property name="minimumSize">
+                     <size>
+                      <width>60</width>
+                      <height>0</height>
+                     </size>
+                    </property>
+                    <property name="font">
+                     <font>
+                      <family>微软雅黑</family>
+                      <weight>75</weight>
+                      <bold>true</bold>
+                     </font>
+                    </property>
+                    <property name="text">
+                     <string>脑组织</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLineEdit" name="lineEdit_4">
+                    <property name="text">
+                     <string>Brain</string>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </item>
+                <item>
+                 <layout class="QHBoxLayout" name="horizontalLayout_42">
+                  <item>
+                   <widget class="QLabel" name="label_63">
+                    <property name="minimumSize">
+                     <size>
+                      <width>60</width>
+                      <height>0</height>
+                     </size>
+                    </property>
+                    <property name="font">
+                     <font>
+                      <family>微软雅黑</family>
+                      <weight>75</weight>
+                      <bold>true</bold>
+                     </font>
+                    </property>
+                    <property name="text">
+                     <string>脑膜</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLineEdit" name="lineEdit_5">
+                    <property name="text">
+                     <string>Meninges</string>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </item>
+                <item>
+                 <layout class="QHBoxLayout" name="horizontalLayout_43">
+                  <item>
+                   <widget class="QLabel" name="label_67">
+                    <property name="minimumSize">
+                     <size>
+                      <width>60</width>
+                      <height>0</height>
+                     </size>
+                    </property>
+                    <property name="font">
+                     <font>
+                      <family>微软雅黑</family>
+                      <weight>75</weight>
+                      <bold>true</bold>
+                     </font>
+                    </property>
+                    <property name="text">
+                     <string>脑区</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLineEdit" name="lineEdit_6">
+                    <property name="text">
+                     <string>Regions</string>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="pushButton">
+                  <property name="minimumSize">
+                   <size>
+                    <width>0</width>
+                    <height>27</height>
+                   </size>
+                  </property>
+                  <property name="text">
+                   <string>重命名</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
               </widget>
              </widget>
             </widget>
@@ -2253,7 +2533,7 @@
                  </size>
                 </property>
                 <property name="text">
-                 <string>融合展示</string>
+                 <string>融合展示【采用预设】</string>
                 </property>
                </widget>
               </item>
