--- a/Plugins/org.mitk.lancet.InstantiationCamera/src/internal/InstantiationCameraControls.ui
+++ b/Plugins/org.mitk.lancet.InstantiationCamera/src/internal/InstantiationCameraControls.ui
@@ -260,6 +260,19 @@
         <string>绘制矩形</string>
        </property>
       </widget>
+      <widget class="QPushButton" name="GeneratePointCloudBtn">
+       <property name="geometry">
+        <rect>
+         <x>320</x>
+         <y>50</y>
+         <width>75</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>生成点云</string>
+       </property>
+      </widget>
      </widget>
      <widget class="QWidget" name="tab_2">
       <attribute name="title">
